# coding_benchmark

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CodingBenchmark.vcxproj  CodingBenchmark.vcxproj.filters  CopyTest.hpp  LICENSE  Main.cpp  README.md  Test.cpp  Test.hpp  an_vs_xor.sln  an_vs_xor.vcxproj  an_vs_xor.vcxproj.filters  bootstrap.sh  plot_check.m  plot_check_avx2.m  plot_decode.m  plot_decode_avx2.m  plot_encode.m  plot_encode_avx2.m  run.sh  runbench.sh
AN/: ANTest.h  ANTest.hpp  AN_avx2_16x16_16x32.h  AN_avx2_16x16_16x32.hpp  AN_avx2_16x16_16x32_divmod.hpp  AN_avx2_16x16_16x32_inv.hpp  AN_seq_16_32.h  AN_seq_16_32_s.h  AN_seq_16_32_s.hpp  AN_seq_16_32_s_divmod.hpp  AN_seq_16_32_s_inv.hpp  AN_seq_16_32_u.h  AN_seq_16_32_u.hpp  AN_seq_16_32_u_divmod.hpp  AN_seq_16_32_u_inv.hpp  AN_sse42_8x16_8x32.h  AN_sse42_8x16_8x32.hpp  AN_sse42_8x16_8x32_divmod.hpp  AN_sse42_8x16_8x32_inv.hpp
Hamming/: HammingTest.hpp  Hamming_seq.hpp  Hamming_seq_16.hpp  Hamming_seq_32.hpp  Hamming_sse42.hpp  Hamming_sse42_16.hpp  Hamming_sse42_32.hpp
Util/: AlignedBlock.hpp  CPU.cpp  CPU.h  ErrorInfo.cpp  ErrorInfo.hpp  Euclidean.hpp  Intrinsics.h  Intrinsics.hpp  Stopwatch.cpp  Stopwatch.hpp  TestInfo.cpp  TestInfo.hpp  VFunc.hpp
XOR/: XOR_avx2.h  XOR_avx2.hpp  XOR_avx2_16x16_16.h  XOR_avx2_16x16_16.hpp  XOR_avx2_16x16_16x16.h  XOR_avx2_16x16_16x16.hpp  XOR_avx2_8x32_32.h  XOR_avx2_8x32_32.hpp  XOR_avx2_8x32_8x32.h  XOR_avx2_8x32_8x32.hpp  XOR_base.h  XOR_base.hpp  XOR_seq.h  XOR_seq.hpp  XOR_seq_16_16.h  XOR_seq_16_16.hpp  XOR_seq_16_8.h  XOR_seq_16_8.hpp  XOR_seq_32_32.h  XOR_seq_32_32.hpp  XOR_seq_32_8.h  XOR_seq_32_8.hpp  XOR_sse42.h  XOR_sse42.hpp  XOR_sse42_4x32_32.h  XOR_sse42_4x32_32.hpp  XOR_sse42_4x32_4x32.h  XOR_sse42_4x32_4x32.hpp  XOR_sse42_8x16_16.h  XOR_sse42_8x16_16.hpp  XOR_sse42_8x16_8x16.h  XOR_sse42_8x16_8x16.hpp
include/AN/: ANTest.hpp  AN_avx2.hpp  AN_avx2_16x16_16x32.hpp  AN_avx2_16x16_16x32_divmod.tcc  AN_avx2_16x16_16x32_inv.tcc  AN_avx2_16x16_16x32_s_inv.hpp  AN_avx2_16x16_16x32_u_divmod.hpp  AN_avx2_16x16_16x32_u_inv.hpp  AN_scalar.hpp  AN_scalar.tcc  AN_scalar_divmod.tcc  AN_scalar_inv.tcc  AN_scalar_s_inv.tcc  AN_scalar_u_inv.tcc  AN_simd.hpp  AN_simd.tcc  AN_simd_divmod.tcc  AN_simd_inv.tcc  AN_sse42.hpp  AN_sse42_8x16_8x32.tcc  AN_sse42_8x16_8x32_divmod.tcc  AN_sse42_8x16_8x32_inv.tcc  AN_sse42_8x16_8x32_s_inv.hpp  AN_sse42_8x16_8x32_s_inv.tcc  AN_sse42_8x16_8x32_u_divmod.hpp  AN_sse42_8x16_8x32_u_inv.tcc
include/CRC/: CRC_base.hpp  CRC_scalar.hpp  CRC_scalar.tcc
include/Copy/: CopyTest.hpp  CopyTest2.hpp
include/Hamming/: Hamming_base.hpp  Hamming_compute.hpp  Hamming_compute.tcc  Hamming_scalar.hpp  Hamming_scalar.tcc  Hamming_simd.hpp  Hamming_simd.tcc
include/SIMD/: AVX2.hpp  AVX2_base.tcc  AVX2_int08.tcc  AVX2_int16.tcc  AVX2_int32.tcc  AVX2_int64.tcc  AVX512.hpp  AVX512_base.tcc  AVX512_int08.tcc  AVX512_int16.tcc  AVX512_int32.tcc  AVX512_int64.tcc  SIMD.hpp  SIMD.tcc  SSE.hpp  SSE_base.tcc  SSE_int08.tcc  SSE_int16.tcc  SSE_int32.tcc  SSE_int64.tcc
include/Strings/: StringBase.hpp  Strings.hpp  StringsAN.hpp  StringsXOR.hpp
include/Util/: AlignedBlock.hpp  ComputeNumRuns.hpp  ErrorInfo.hpp  Euclidean.hpp  Functors.hpp  Helpers.hpp  Intrinsics.hpp  Output.hpp  Test.hpp  TestConfiguration.hpp  TestInfo.hpp
include/XOR/: XOR_avx2.hpp  XOR_avx2.tcc  XOR_base.hpp  XOR_scalar.hpp  XOR_scalar.tcc  XOR_simd.hpp  XOR_simd.tcc  XOR_sse42.hpp  XOR_sse42.tcc
nbproject/: configurations.xml  project.properties  project.xml
src/: AN_Datalength_Comparison.cpp  CopyTest.hpp  CopyTest2.hpp  Main.cpp  Main.hpp  Output.cpp  Output.hpp  Test.cpp  Test.hpp  TestComputeHamming.cpp  TestModuloInverseComputation.cpp  TestModuloInverseComputation2.cpp  TestPopcount.cpp  TestString.cpp  TestString2.cpp
src/AN/: ANTest.hpp  AN_avx2.cpp  AN_avx2.hpp  AN_avx2_16_32_s_divmod.cpp  AN_avx2_16_32_s_inv.cpp  AN_avx2_16_32_u_divmod.cpp  AN_avx2_16_32_u_inv.cpp  AN_avx2_16x16_16x32.hpp  AN_avx2_16x16_16x32_s_divmod.cpp  AN_avx2_16x16_16x32_s_divmod.hpp  AN_avx2_16x16_16x32_s_inv.cpp  AN_avx2_16x16_16x32_s_inv.hpp  AN_avx2_16x16_16x32_u_divmod.cpp  AN_avx2_16x16_16x32_u_divmod.hpp  AN_avx2_16x16_16x32_u_inv.cpp  AN_avx2_16x16_16x32_u_inv.hpp  AN_avx2_32_64_s_divmod.cpp  AN_avx2_32_64_s_inv.cpp  AN_avx2_32_64_u_divmod.cpp  AN_avx2_32_64_u_inv.cpp  AN_avx2_8_16_s_divmod.cpp  AN_avx2_8_16_s_inv.cpp  AN_avx2_8_16_u_divmod.cpp  AN_avx2_8_16_u_inv.cpp  AN_scalar.cpp  AN_scalar.hpp  AN_scalar.tcc  AN_scalar_16_32_s_divmod.cpp  AN_scalar_16_32_s_inv.cpp  AN_scalar_16_32_u_divmod.cpp  AN_scalar_16_32_u_inv.cpp  AN_scalar_32_64_s_divmod.cpp  AN_scalar_32_64_s_inv.cpp  AN_scalar_32_64_u_divmod.cpp  AN_scalar_32_64_u_inv.cpp  AN_scalar_8_16_s_divmod.cpp  AN_scalar_8_16_s_inv.cpp  AN_scalar_8_16_u_divmod.cpp  AN_scalar_8_16_u_inv.cpp  AN_scalar_divmod.tcc  (+42 more)
src/CRC/: CRC32_scalar_16.cpp  CRC32_scalar_32.cpp  CRC_base.cpp
src/Copy/: CopyTest.hpp
src/Hamming/: Hamming_avx2.cpp  Hamming_avx2.hpp  Hamming_avx2.tcc  Hamming_avx2_16.cpp  Hamming_avx2_32.cpp  Hamming_avx512.cpp  Hamming_avx512.hpp  Hamming_avx512.tcc  Hamming_avx512_16.cpp  Hamming_avx512_32.cpp  Hamming_base.hpp  Hamming_compute.cpp  Hamming_compute.hpp  Hamming_compute.tcc  Hamming_compute_avx2_1_16.cpp  Hamming_compute_avx2_1_32.cpp  Hamming_compute_avx2_2_16.cpp  Hamming_compute_avx2_2_32.cpp  Hamming_compute_avx2_3_16.cpp  Hamming_compute_avx2_3_32.cpp  Hamming_compute_scalar_16.cpp  Hamming_compute_scalar_32.cpp  Hamming_compute_sse42_1_16.cpp  Hamming_compute_sse42_1_32.cpp  Hamming_compute_sse42_2_16.cpp  Hamming_compute_sse42_2_32.cpp  Hamming_compute_sse42_3_16.cpp  Hamming_compute_sse42_3_32.cpp  Hamming_scalar.cpp  Hamming_scalar.hpp  Hamming_scalar.tcc  Hamming_scalar_16.cpp  Hamming_scalar_32.cpp  Hamming_seq.hpp  Hamming_seq_16.hpp  Hamming_seq_32.hpp  Hamming_simd.tcc  Hamming_sse42.cpp  Hamming_sse42.hpp  Hamming_sse42.tcc  (+4 more)
vs2015/: CodingBenchmark.vcxproj  CodingBenchmark.vcxproj.filters
vs2017/: CodingBenchmark.sln  CodingBenchmark.vcxproj  CodingBenchmark.vcxproj.filters
(+91 files in other folders)
